<resources>
    <string name="app_name">FiledGameAppTest</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_passwordConf">Passwords don\'t match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Register -->
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_conformation">Repeat password</string>
    <string name="title_activity_maps">Map</string>

</resources>
